--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -7,6 +7,9 @@
 //scrollbar
 @import 'scrollbar';
 
+// animations
+@import './animations/fade_animation';
+
 body {
   font-family: 'Inter', 'NanumGothic', sans-serif;
 }
